--- a/components/PurchaseModal/PurchaseModal.scss
+++ b/components/PurchaseModal/PurchaseModal.scss
@@ -7,7 +7,6 @@
   background: rgba(0, 0, 0, 0.98);
   z-index: 10000;
   padding: 2rem;
-  overflow-y: auto;
   align-items: center;
   justify-content: center;
   opacity: 0;
@@ -16,8 +15,6 @@
 
   @media (max-width: 768px) {
     padding: 1rem;
-    align-items: flex-start;
-    padding-top: 2rem;
   }
 
   &--active {
@@ -30,17 +27,33 @@
     color: $black;
     max-width: 700px;
     width: 100%;
+    max-height: calc(100vh - 4rem);
     padding: 3.5rem;
     position: relative;
     border: 5px solid $black;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+
+    // Custom scrollbar for better brutalist look
+    &::-webkit-scrollbar {
+      width: 8px;
+    }
+    &::-webkit-scrollbar-track {
+      background: $white;
+    }
+    &::-webkit-scrollbar-thumb {
+      background: $black;
+    }
 
     @media (max-width: 768px) {
-      padding: 2rem 1.5rem;
+      padding: 2.5rem 1.5rem;
       border-width: 3px;
+      max-height: calc(100vh - 2rem);
     }
 
     @media (max-width: 480px) {
-      padding: 1.5rem 1rem;
+      padding: 2rem 1rem;
     }
   }
 
