--- a/components/PurchaseModal/PurchaseModal.scss
+++ b/components/PurchaseModal/PurchaseModal.scss
@@ -156,4 +156,55 @@
     margin-bottom: 2rem;
     line-height: 1.6;
   }
+
+  &__checkbox-field {
+    margin-bottom: 1rem;
+  }
+
+  &__checkbox-label {
+    display: flex;
+    align-items: flex-start;
+    gap: 0.75rem;
+    font-family: $font-secondary;
+    font-size: 0.875rem;
+    cursor: pointer;
+    line-height: 1.4;
+
+    span {
+      padding-top: 0.1rem;
+    }
+  }
+
+  &__checkbox {
+    appearance: none;
+    -webkit-appearance: none;
+    width: 1.25rem;
+    height: 1.25rem;
+    border: 3px solid $black;
+    background: $white;
+    cursor: pointer;
+    position: relative;
+    flex-shrink: 0;
+    margin-top: 0.1rem;
+
+    &:checked {
+      background: $black;
+
+      &::after {
+        content: '✓';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: $white;
+        font-size: 0.9rem;
+        font-weight: 700;
+      }
+    }
+
+    &:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+    }
+  }
 }
