--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,17 +1,17 @@
-@import 'base/variables';
-@import 'base/reset';
-@import 'base/typography';
+@use 'base/variables';
+@use 'base/reset';
+@use 'base/typography';
 
 // Components
-@import '../components/Navigation/Navigation';
-@import '../components/Hero/Hero';
-@import 'components/section';
-@import '../components/PoemSample/PoemSample';
-@import '../components/IllustrationGrid/IllustrationGrid';
-@import '../components/ColorSpectrum/ColorSpectrum';
-@import '../components/Author/Author';
-@import '../components/ProductGrid/ProductGrid';
-@import '../components/FAQ/FAQ';
-@import '../components/PurchaseModal/PurchaseModal';
-@import 'components/button';
-@import '../components/Footer/Footer';
+@use '../components/Navigation/Navigation';
+@use '../components/Hero/Hero';
+@use 'components/section';
+@use '../components/PoemSample/PoemSample';
+@use '../components/IllustrationGrid/IllustrationGrid';
+@use '../components/ColorSpectrum/ColorSpectrum';
+@use '../components/Author/Author';
+@use '../components/ProductGrid/ProductGrid';
+@use '../components/FAQ/FAQ';
+@use '../components/PurchaseModal/PurchaseModal';
+@use 'components/button';
+@use '../components/Footer/Footer';
