--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@use 'variables' as vars;
 
 * {
   margin: 0;
@@ -7,10 +7,10 @@
 }
 
 body {
-  font-family: $font-secondary;
+  font-family: vars.$font-secondary;
   font-weight: 300;
-  background: $black;
-  color: $white;
+  background: vars.$black;
+  color: vars.$white;
   overflow-x: hidden;
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
