--- a/styles/components/_section.scss
+++ b/styles/components/_section.scss
@@ -1,4 +1,4 @@
-@import '../base/variables';
+@use '../base/variables' as vars;
 
 .section {
   padding: clamp(5rem, 12vw, 10rem) clamp(1.5rem, 4vw, 3rem);
@@ -11,7 +11,7 @@
   }
 
   &__title {
-    font-family: $font-primary;
+    font-family: vars.$font-primary;
     font-size: clamp(3rem, 8vw, 7rem);
     font-weight: 700;
     margin-bottom: clamp(3rem, 6vw, 5rem);
